[gd_scene load_steps=8 format=2]

[ext_resource path="res://Codigos/HUDS/telaControles.gd" type="Script" id=1]
[ext_resource path="res://Imagens/botaovoltar.png" type="Texture" id=2]
[ext_resource path="res://Imagens/pixilart-drawing (1).png" type="Texture" id=3]
[ext_resource path="res://Imagens/speaker.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/classic_memesbruh03.ttf"

[sub_resource type="DynamicFont" id=7]
size = 93
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="telaControles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -567, -60 )
script = ExtResource( 1 )

[node name="fundo" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
expand = true

[node name="Escolha" type="Label" parent="."]
margin_left = -2.0
margin_top = 66.0
margin_right = 1912.0
margin_bottom = 234.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Controles"
align = 1
valign = 1

[node name="botaoSom" type="Button" parent="."]
margin_left = 1785.0
margin_top = 57.0
margin_right = 1870.0
margin_bottom = 137.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Voltar" type="Sprite" parent="."]
position = Vector2( 970, 906 )
scale = Vector2( 5.36719, 5.35937 )
texture = ExtResource( 2 )

[node name="VoltarBtn" type="Button" parent="Voltar"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -5.0
margin_top = -5.0
margin_right = 16.0
margin_bottom = 15.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Escolha2" type="Label" parent="."]
margin_left = 149.0
margin_top = 240.0
margin_right = 1780.0
margin_bottom = 687.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Este jogo é criado para incentivar  o desenvolvimento de matemática e lógica de programaçâo
Siga as instruçôes colocadas no tutorial inicial para prosseguir no jogo"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="botaoSom" to="." method="_on_botaoSom_pressed"]
[connection signal="pressed" from="Voltar/VoltarBtn" to="." method="_on_VoltarBtn_pressed"]
